--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Carousel Slider CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/owl.theme.default.min.css">
+    <link href="assets/lib/animate/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.min.css">
     <!-- Main Style CSS  -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -1172,6 +1173,9 @@
 <!-- carousel slider JS -->
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/owl.carousel.min.js"></script>
+<script src=" assets/lib/wow/wow.min.js"></script>
+<script src=" assets/lib/easing/easing.min.js"></script>
+<script src=" assets/lib/waypoints/waypoints.min.js"></script>
 <script src="assets/js/magnific-popup.js"></script>
 <!-- Custom JS Link -->
 <script src="assets/js/custom.js"></script> 
