--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
     </div>
 </div>
 <!-- Navbar -->
-<main>
+<main class="d-none">
     <!-- banner-area start -->
     <section class="theme-bg page-header about-page-header">
           <!-- Header Start -->
