--- a/login.html
+++ b/login.html
@@ -153,14 +153,14 @@
 </div>
 <!-- Navbar -->
 <main id="login">
-    <section class="login-wrapper d-none">
+    <section class="login-wrapper">
         <div class="container">
             <input type="checkbox" id="flip">
             <div class="cover">
               <div class="front">
                 <img src="assets/img/login/frontImg.jpg" alt="login">
                 <div class="text">
-                  <span class="text-1">Every new friend is a <br> new adventure</span>
+                  <span class="text-1">Every new member is a <br> new adventure</span>
                   <span class="text-2">Let's get connected</span>
                 </div>
               </div>
