--- a/blog.html
+++ b/blog.html
@@ -177,7 +177,7 @@
     <!-- banner-area end -->
   
        <!-- Blog Start -->
-       <div class="blog-area py-5 d-none">
+       <section class="blog-area py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
@@ -350,7 +350,7 @@
                 </div>
             </div>
         </div>
-    </div>
+       </section>
     <!-- Blog End -->
 
 </main>
