--- a/blog.html
+++ b/blog.html
@@ -161,11 +161,11 @@
               <div class="container py-5">
                   <div class="row justify-content-center">
                       <div class="col-lg-10 text-center">
-                          <h1 class="display-3 text-white animated slideInDown">About Us</h1>
+                          <h1 class="display-3 text-white animated slideInDown">Blog</h1>
                           <nav aria-label="breadcrumb">
                               <ol class="breadcrumb justify-content-center">
                                   <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                  <li class="breadcrumb-item text-white active" aria-current="page">About Us</li>
+                                  <li class="breadcrumb-item text-white active" aria-current="page">Blog</li>
                               </ol>
                           </nav>
                       </div>
