--- a/contact.html
+++ b/contact.html
@@ -122,11 +122,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-lg-4 ms-0">
-                    <a href="index.html" class="nav-item nav-link ">Home</a>
-                    <a href="about.html" class="nav-item nav-link active">About Us</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About Us</a>
                     <a href="courses.html" class="nav-item nav-link">Courses</a>
                     <a href="blog.html" class="nav-item nav-link">Blog</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
                 </div>
                 <div class="ms-auto">
                     <a href="#" class="search-icon ms-3">
@@ -161,11 +161,11 @@
               <div class="container py-5">
                   <div class="row justify-content-center">
                       <div class="col-lg-10 text-center">
-                          <h1 class="display-3 text-white animated slideInDown">About Us</h1>
+                          <h1 class="display-3 text-white animated slideInDown">Contact Us</h1>
                           <nav aria-label="breadcrumb">
                               <ol class="breadcrumb justify-content-center">
                                   <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                  <li class="breadcrumb-item text-white active" aria-current="page">About Us</li>
+                                  <li class="breadcrumb-item text-white active" aria-current="page">Contact Us</li>
                               </ol>
                           </nav>
                       </div>
@@ -176,81 +176,94 @@
     </section>
     <!-- banner-area end -->
   
-    <!-- About Start -->
-    <div class="about-area py-5">
+    <!-- Contact Area Start -->
+    
+     <section class="contact_area py-5">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5">
-                    <img class="img-fluid rounded mb-4 mb-lg-0" src="assets/img/about/about.jpg" alt="">
+          <div class="col-md-12 pb-5">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.5469548135934!2d90.42033850888446!3d23.763529878572413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c7f5bfcb33df%3A0xb4edb1bd16f60b1f!2sTime%20research%20%26%20innovation%2C%20BD!5e0!3m2!1sen!2sbd!4v1719825628885!5m2!1sen!2sbd" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="contact_info">
+                <div class="info_item">
+                  <i class="fas fa-home"></i>
+                  <h6>California, United States</h6>
+                  <p>Santa monica bullevard</p>
                 </div>
-                <div class="col-lg-7">
-                    
-                    <div class="section-title  text-start">
-                        <h2 class="theme-color">
-                            About Us <br>Innovative Way To
-                            <span class="black-color">  Learn! <img src="assets/img/vector.png" alt="vector">
-                            </span>
-                        </h2>
-                    </div>
-                    <p>Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita est. Diam sanctus gubergren sit rebum clita amet, sea est sea vero sed et. Sadipscing labore tempor at sit dolor clita consetetur diam. Diam ut diam tempor no et, lorem dolore invidunt no nonumy stet ea labore, dolor justo et sit gubergren diam sed sed no ipsum. Sit tempor ut nonumy elitr dolores justo aliquyam ipsum stet</p>
-                    <a href="" class="theme-btn py-md-2 px-md-4 font-weight-semi-bold mt-3">Learn More</a>
+                <div class="info_item">
+                  <i class="fas fa-headphones"></i>
+                  <h6><a href="#">+88 (0) 185 450 0744</a></h6>
+                  <p>Mon to Sat 9am to 6 pm</p>
                 </div>
+                <div class="info_item">
+                  <i class="fas fa-envelope"></i>
+                  <h6><a href="#">support@tri.com</a></h6>
+                  <p>Send us your query anytime!</p>
+                </div>
+              </div>
             </div>
+            <div class="col-lg-9">
+              <form
+                class="row contact_form"
+                action="contact_process.php"
+                method="post"
+                id="contactForm"
+                novalidate="novalidate"
+              >
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="name"
+                      name="name"
+                      placeholder="Enter your name"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="email"
+                      name="email"
+                      placeholder="Enter email address"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="subject"
+                      name="subject"
+                      placeholder="Enter Subject"
+                    />
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <textarea
+                      class="form-control"
+                      name="message"
+                      id="message"
+                      rows="1"
+                      placeholder="Enter Message"
+                    ></textarea>
+                  </div>
+                </div>
+                <div class="col-md-12 text-end">
+                  <button type="submit" value="submit" class="btn theme-btn">
+                    Send Message
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
-    </div>
-    <!-- About End -->
+      </section>
+    <!-- Contact Area -->
 
 
-    <!-- Registration Start -->
-    <div class="bg-registration py-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-7 mb-5 mb-lg-0">
-                    <div class="mb-4">
-                        <h5 class="yellow-color text-uppercase mb-3" style="letter-spacing: 5px;">Need Any Courses</h5>
-                        <h1 class="text-white">30% Off For New Students</h1>
-                    </div>
-                    <p class="text-white mb-1">Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos,
-                        ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-                        dolor</p>
-                    <ul class="list-inline text-white m-0">
-                        <li class="py-2"><i class="fa fa-check yellow-color me-3"></i>Labore eos amet dolor amet diam</li>
-                        <li class="py-2"><i class="fa fa-check yellow-color me-3"></i>Etsea et sit dolor amet ipsum</li>
-                        <li class="py-2"><i class="fa fa-check yellow-color me-3"></i>Diam dolor diam elitripsum vero.</li>
-                    </ul>
-                </div>
-                <div class="col-lg-5">
-                    <div class="card border-0">
-                        <div class="card-header bg-light text-center p-4">
-                            <h1 class="m-0">Sign Up Now</h1>
-                        </div>
-                        <div class="card-body rounded-bottom theme-bg p-5">
-                            <form>
-                                <div class="form-group">
-                                    <input type="text" class="form-control border-0 " placeholder="Your name" required="required" />
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control border-0 " placeholder="Your email" required="required" />
-                                </div>
-                                <div class="form-group">
-                                    <select class="custom-select border-0 px-4" >
-                                        <option selected>Select a course</option>
-                                        <option value="1">Course 1</option>
-                                        <option value="2">Course 1</option>
-                                        <option value="3">Course 1</option>
-                                    </select>
-                                </div>
-                                <div>
-                                    <button class=" btn btn-yellow btn-block border-0 py-3" type="submit">Sign Up Now</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Registration End -->
 
     <!-- Courses End -->
 
