--- a/courses.html
+++ b/courses.html
@@ -113,7 +113,7 @@
   <div class="main-header sticky-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg ">
-            <a href="#" class="navbar-brand p-0">
+            <a href="index.html" class="navbar-brand p-0">
                 <img src="assets/img/Logo.png" alt="Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -122,11 +122,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-lg-4 ms-0">
-                    <a href="#" class="nav-item nav-link active">Home</a>
-                    <a href="#" class="nav-item nav-link">About Us</a>
-                    <a href="#" class="nav-item nav-link">Courses</a>
-                    <a href="#" class="nav-item nav-link">Blog</a>
-                    <a href="#" class="nav-item nav-link">Contact Us</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About Us</a>
+                    <a href="courses.html" class="nav-item nav-link active">Courses</a>
+                    <a href="blog.html" class="nav-item nav-link">Blog</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <div class="ms-auto">
                     <a href="#" class="search-icon ms-3">
@@ -137,7 +137,7 @@
                                 stroke="#121112" stroke-width="2" stroke-linecap="round" />
                         </svg>
                     </a>
-                    <a href="#" class="cart-icon position-relative ms-3">
+                    <a href="cart.html" class="cart-icon position-relative ms-3">
                         <svg width="22" height="19" viewBox="0 0 22 19" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -146,7 +146,7 @@
                         </svg>
                         <span class="cart-count theme-bg text-white text-center">0</span>
                     </a>
-                    <a href="#" class="theme-btn ms-4"> Login </a>
+                    <a href="login.html" class="theme-btn ms-4"> Login </a>
                 </div>
             </div>
         </nav>
@@ -592,7 +592,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container-xxl py-5 wow fadeInUp d-none" data-wow-delay="0.1s">
         <div class="container">
             <div class="section-title text-center">
                 <h2 class="theme-color ">
@@ -834,8 +834,7 @@
                     <ul>
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Terms & Condition</a></li>
-                        <li><a href="#">Refund Policy</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -845,10 +844,10 @@
                         Links
                     </h3>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Courses</a></li>
-                        <li><a href="#">Cart</a></li>
-                        <li><a href="#">Login</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="courses.html">Courses</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="about.html">About Us</a></li>
                     </ul>
                 </div>
             </div>
