--- a/enroll.html
+++ b/enroll.html
@@ -122,8 +122,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-lg-4 ms-0">
-                    <a href="index.html" class="nav-item nav-link ">Home</a>
-                    <a href="about.html" class="nav-item nav-link active">About Us</a>
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About Us</a>
                     <a href="courses.html" class="nav-item nav-link">Courses</a>
                     <a href="blog.html" class="nav-item nav-link">Blog</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
@@ -154,103 +154,83 @@
 </div>
 <!-- Navbar -->
 <main>
-    <!-- banner-area start -->
-    <section class="theme-bg page-header about-page-header">
-          <!-- Header Start -->
-          <div class="container-fluid  py-5 mb-5 ">
-              <div class="container py-5">
-                  <div class="row justify-content-center">
-                      <div class="col-lg-10 text-center">
-                          <h1 class="display-3 text-white animated slideInDown">About Us</h1>
-                          <nav aria-label="breadcrumb">
-                              <ol class="breadcrumb justify-content-center">
-                                  <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                  <li class="breadcrumb-item text-white active" aria-current="page">About Us</li>
-                              </ol>
-                          </nav>
-                      </div>
-                  </div>
+   
+    <!--================ Start Registration Area =================-->
+    <div class="registration_area py-5">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-7">
+              <div class="row clock_sec clockdiv" id="clockdiv">
+                <div class="col-lg-12">
+                  <h1 class="mb-3">Enroll Now</h1>
+                  <p class="text-white pb-2">
+                    There is a moment in the life of any aspiring astronomer that
+                    it is time to buy that first telescope. It’s exciting to think
+                    about setting up your own viewing station.
+                  </p>
+                </div>
+                <div class="col clockinner1 clockinner">
+                  <h1 class="days">150</h1>
+                  <span class="smalltext">Days</span>
+                </div>
+                <div class="col clockinner clockinner1">
+                  <h1 class="hours">23</h1>
+                  <span class="smalltext">Hours</span>
+                </div>
+                <div class="col clockinner clockinner1">
+                  <h1 class="minutes">47</h1>
+                  <span class="smalltext">Mins</span>
+                </div>
+                <div class="col clockinner clockinner1">
+                  <h1 class="seconds">59</h1>
+                  <span class="smalltext">Secs</span>
+                </div>
               </div>
+            </div>
+            <div class="col-lg-4 offset-lg-1">
+              <div class="register_form">
+                <h3>Courses for Free</h3>
+                <p class="my-2">It is high time for learning</p>
+                <form
+                  class="form_area"
+                  id="myForm"
+                  action=""
+                  method=""
+                >
+                  <div class="row">
+                    <div class="col-lg-12 form_group">
+                      <input
+                        name="name"
+                        placeholder="Your Name"
+                        required=""
+                        type="text"
+                      />
+                      <input
+                        name="name"
+                        placeholder="Your Phone Number"
+                        required=""
+                        type="tel"
+                      />
+                      <input
+                        name="email"
+                        placeholder="Your Email Address"
+                        pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
+                        required=""
+                        type="email"
+                      />
+                    </div>
+                    <div class="col-lg-12 text-center mt-4">
+                      <button class="theme-btn ">Submit</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
-          <!-- Header End -->
-    </section>
-    <!-- banner-area end -->
-  
-    <!-- About Start -->
-    <div class="about-area py-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5">
-                    <img class="img-fluid rounded mb-4 mb-lg-0" src="assets/img/about/about.jpg" alt="">
-                </div>
-                <div class="col-lg-7">
-                    
-                    <div class="section-title  text-start">
-                        <h2 class="theme-color">
-                            About Us <br>Innovative Way To
-                            <span class="black-color">  Learn! <img src="assets/img/vector.png" alt="vector">
-                            </span>
-                        </h2>
-                    </div>
-                    <p>Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita est. Diam sanctus gubergren sit rebum clita amet, sea est sea vero sed et. Sadipscing labore tempor at sit dolor clita consetetur diam. Diam ut diam tempor no et, lorem dolore invidunt no nonumy stet ea labore, dolor justo et sit gubergren diam sed sed no ipsum. Sit tempor ut nonumy elitr dolores justo aliquyam ipsum stet</p>
-                    <a href="" class="theme-btn py-md-2 px-md-4 font-weight-semi-bold mt-3">Learn More</a>
-                </div>
-            </div>
         </div>
-    </div>
-    <!-- About End -->
+      </div>
+      <!--================ End Registration Area =================-->
 
-
-    <!-- Registration Start -->
-    <div class="bg-registration py-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-7 mb-5 mb-lg-0">
-                    <div class="mb-4">
-                        <h5 class="yellow-color text-uppercase mb-3" style="letter-spacing: 5px;">Need Any Courses</h5>
-                        <h1 class="text-white">30% Off For New Students</h1>
-                    </div>
-                    <p class="text-white mb-1">Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos,
-                        ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-                        dolor</p>
-                    <ul class="list-inline text-white m-0">
-                        <li class="py-2"><i class="fa fa-check yellow-color me-3"></i>Labore eos amet dolor amet diam</li>
-                        <li class="py-2"><i class="fa fa-check yellow-color me-3"></i>Etsea et sit dolor amet ipsum</li>
-                        <li class="py-2"><i class="fa fa-check yellow-color me-3"></i>Diam dolor diam elitripsum vero.</li>
-                    </ul>
-                </div>
-                <div class="col-lg-5">
-                    <div class="card border-0">
-                        <div class="card-header bg-light text-center p-4">
-                            <h1 class="m-0">Sign Up Now</h1>
-                        </div>
-                        <div class="card-body rounded-bottom theme-bg p-5">
-                            <form>
-                                <div class="form-group">
-                                    <input type="text" class="form-control border-0 " placeholder="Your name" required="required" />
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control border-0 " placeholder="Your email" required="required" />
-                                </div>
-                                <div class="form-group">
-                                    <select class="custom-select border-0 px-4" >
-                                        <option selected>Select a course</option>
-                                        <option value="1">Course 1</option>
-                                        <option value="2">Course 1</option>
-                                        <option value="3">Course 1</option>
-                                    </select>
-                                </div>
-                                <div>
-                                    <button class=" btn btn-yellow btn-block border-0 py-3" type="submit">Sign Up Now</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Registration End -->
 
     <!-- Courses End -->
 
