--- a/login.html
+++ b/login.html
@@ -112,7 +112,7 @@
   <div class="main-header sticky-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg ">
-            <a href="#" class="navbar-brand p-0">
+            <a href="index.html" class="navbar-brand p-0">
                 <img src="assets/img/Logo.png" alt="Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -121,11 +121,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-lg-4 ms-0">
-                    <a href="#" class="nav-item nav-link active">Home</a>
-                    <a href="#" class="nav-item nav-link">About Us</a>
-                    <a href="#" class="nav-item nav-link">Courses</a>
-                    <a href="#" class="nav-item nav-link">Blog</a>
-                    <a href="#" class="nav-item nav-link">Contact Us</a>
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About Us</a>
+                    <a href="courses.html" class="nav-item nav-link">Courses</a>
+                    <a href="blog.html" class="nav-item nav-link">Blog</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <div class="ms-auto">
                     <a href="#" class="search-icon ms-3">
@@ -136,7 +136,7 @@
                                 stroke="#121112" stroke-width="2" stroke-linecap="round" />
                         </svg>
                     </a>
-                    <a href="#" class="cart-icon position-relative ms-3">
+                    <a href="cart.html" class="cart-icon position-relative ms-3">
                         <svg width="22" height="19" viewBox="0 0 22 19" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -145,7 +145,7 @@
                         </svg>
                         <span class="cart-count theme-bg text-white text-center">0</span>
                     </a>
-                    <a href="#" class="theme-btn ms-4"> Login </a>
+                    <a href="login.html" class="theme-btn ms-4"> Login </a>
                 </div>
             </div>
         </nav>
@@ -190,7 +190,7 @@
                       <div class="button input-box">
                         <input type="submit" value="Sumbit">
                       </div>
-                      <div class="text sign-up-text">Don't have an account? <label for="flip">Sigup now</label></div>
+                      <div class="text sign-up-text">Don't have an account? <label for="flip">Signup now</label></div>
                     </div>
                 </form>
               </div>
@@ -302,8 +302,7 @@
                     <ul>
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Terms & Condition</a></li>
-                        <li><a href="#">Refund Policy</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -313,10 +312,10 @@
                         Links
                     </h3>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Courses</a></li>
-                        <li><a href="#">Cart</a></li>
-                        <li><a href="#">Login</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="courses.html">Courses</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="about.html">About Us</a></li>
                     </ul>
                 </div>
             </div>
