--- a/blog.html
+++ b/blog.html
@@ -180,7 +180,7 @@
        <section class="blog-area py-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-8 blog-wrapper">
                     <div class="row pb-3">
                         <div class="col-lg-6 mb-4">
                             <div class="blog-item position-relative overflow-hidden rounded mb-2">
