--- a/courses.html
+++ b/courses.html
@@ -493,7 +493,7 @@
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn yellow-bg px-3 border-end"
                                     style="border-radius: 30px 0 0 30px;">Read More</a>
-                                <a href="#" class="flex-shrink-0 btn yellow-bg px-3"
+                                <a href="enroll.html" class="flex-shrink-0 btn yellow-bg px-3"
                                     style="border-radius: 0 30px 30px 0;">Join Now</a>
                             </div>
                         </div>
@@ -526,7 +526,7 @@
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn yellow-bg px-3 border-end"
                                     style="border-radius: 30px 0 0 30px;">Read More</a>
-                                <a href="#" class="flex-shrink-0 btn yellow-bg px-3"
+                                <a href="enroll.html" class="flex-shrink-0 btn yellow-bg px-3"
                                     style="border-radius: 0 30px 30px 0;">Join Now</a>
                             </div>
                         </div>
@@ -559,7 +559,7 @@
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn yellow-bg px-3 border-end"
                                     style="border-radius: 30px 0 0 30px;">Read More</a>
-                                <a href="#" class="flex-shrink-0 btn yellow-bg px-3"
+                                <a href="enroll.html" class="flex-shrink-0 btn yellow-bg px-3"
                                     style="border-radius: 0 30px 30px 0;">Join Now</a>
                             </div>
                         </div>
