--- a/enroll.html
+++ b/enroll.html
@@ -220,7 +220,7 @@
                       />
                     </div>
                     <div class="col-lg-12 text-center mt-4">
-                      <button class="theme-btn ">Submit</button>
+                      <button class="theme-btn theme-btn d-block w-100">Submit</button>
                     </div>
                   </div>
                 </form>
