--- a/courses.html
+++ b/courses.html
@@ -188,7 +188,7 @@
                             Programme
                         <i class="fas fa-arrow-down"></i>
                         </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1" style="">
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                             <div class="filter-t">
                                 <div class="terms">
                                     <input type="checkbox" id="Courses">
